refactor: address more review comments

--- a/packages/ui/src/Alert.module.scss
+++ b/packages/ui/src/Alert.module.scss
@@ -21,7 +21,7 @@
       flex: 1 0 auto;
       margin-right: c.$grid * 8.5;
 
-      @include c.typographyBodyHighlight;
+      @include c.typographyBodyNormal('bold');
       @include h.overflowEllipsis;
     }
 
