--- a/packages/ui/styles/constants/_typography.scss
+++ b/packages/ui/styles/constants/_typography.scss
@@ -39,10 +39,6 @@ $lineHeightBodySmall: normal !default;
   @return '';
 }
 
-/* @mixin typographyHighlightFont {
-  font-family: $fontFamilyOpenSans, sans-serif;
-  font-weight: $fontWeightBold;
-} */
 @mixin typographyH1($override: false) {
   font-family: $fontFamilyHeading #{override($override)}; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
   font-weight: $fontWeightHeadingBold #{override($override)};
@@ -71,19 +67,24 @@ $lineHeightBodySmall: normal !default;
   letter-spacing: $letterSpacingButton;
   line-height: $lineHeightButton;
 }
-@mixin typographyBodyHighlight {
-  font-family: $fontFamilyText;
-  font-weight: $fontWeightTextBold;
-  font-size: $fontSizeBodyNormal;
-  letter-spacing: $letterSpacingBodyNormal;
-  line-height: $lineHeightBodyNormal;
+@mixin typographyBodyWeight($weight: 'regular') {
+  @if $weight == 'regular' {
+    font-weight: $fontWeightTextRegular;
+  }
+  @if $weight == 'bold' {
+    font-weight: $fontWeightTextBold;
+  }
+  @if $weight == 'light' {
+    font-weight: $fontWeightTextLight;
+  }
 }
-@mixin typographyBodyNormal {
+@mixin typographyBodyNormal($weight: 'regular') {
   font-family: $fontFamilyText;
-  font-weight: $fontWeightTextRegular;
   font-size: $fontSizeBodyNormal;
   letter-spacing: $letterSpacingBodyNormal;
   line-height: $lineHeightBodyNormal;
+
+  @include typographyBodyWeight($weight);
 }
 @mixin typographyBodySmall {
   font-family: $fontFamilyText;
