--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -63,8 +63,8 @@
 
 // Outline on focus
 label.wrapper.focus .checkmark,
-label.wrapper > input:checked:focus ~ .checkmark,
-label.wrapper > input:focus ~ .checkmark {
+label.wrapper > input:focus ~ .checkmark,
+label.wrapper > input:checked:focus ~ .checkmark {
   @include h.outlineFormField;
 }
 
