--- a/packages/ui/src/RadioGroup.module.scss
+++ b/packages/ui/src/RadioGroup.module.scss
@@ -1,10 +1,9 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
-ul.radioGroup {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
+.radioGroup {
+  display: flex;
+  flex-direction: column;
 
   // Error state
   &.error input:checked ~ * {
