--- a/packages/ui/src/RadioGroup.module.scss
+++ b/packages/ui/src/RadioGroup.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
 
   // Error state
-  &.error input:checked ~ * {
+  &.error label > input:checked ~ * {
     border-color: c.$colorError;
   }
 }
