Smaller Radio button UI adjustments

--- a/packages/ui/src/Radio.module.scss
+++ b/packages/ui/src/Radio.module.scss
@@ -9,6 +9,7 @@
   // Most common use case will be still the usage in a form where parent
   // wrapper controls this.
   vertical-align: bottom;
+  align-items: center;
   cursor: pointer;
 
   @include c.typographyBodySmall;
