fix: neutral lighter colours

--- a/packages/ui/src/Badge.module.scss
+++ b/packages/ui/src/Badge.module.scss
@@ -29,7 +29,7 @@
 
   // Themes
   &.neutral {
-    background-color: c.$colorNeutralLight;
+    background-color: c.$colorNeutralLighter;
     color: c.$colorText;
   }
 
