feat: add number badge

--- a/packages/ui/src/Badge.module.scss
+++ b/packages/ui/src/Badge.module.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  border-radius: c.$borderRadiusToast;
+  border-radius: c.$borderRadiusBadge;
 
   .content {
     margin-left: c.$grid;
