--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -1,7 +1,9 @@
+@use '../styles/constants' as c;
 $h: 3rem;
+$radius: 3rem;
 
 @mixin radius() {
-  border-radius: 2rem;
+  border-radius: $radius;
 }
 
 @mixin track() {
@@ -9,25 +11,33 @@ $h: 3rem;
   appearance: none;
   height: 100%;
   width: 100%;
-  margin: 0;
+  margin: 0 -1rem;
   padding: 0;
   border: 0;
 }
 
 @mixin thumb() {
-  background: blue;
-  //border: none; /* get rid of Firefox thumb border */
+  box-shadow: 0px 1px 4px rgba(53, 61, 73, 0.250956);
+  background: c.$colorPrimaryLight;
+  //background: red;
   border-radius: 50%;
   pointer-events: auto; /* catch clicks */
-  width: $h;
-  height: $h;
+  width: 1rem;
+  height: 1rem;
+  box-sizing: content-box;
+  border: 1rem solid c.$colorNeutralWhite;
+  //opacity: 0.5;
 }
 
 .wrapper {
   display: grid;
+  align-items: center;
   grid-template-rows: max-content 1fr;
-  background: gray;
-  @include radius();
+  //background: gray;
+  height: $h;
+  //border-radius: $radius;
+  overflow: hidden;
+  padding: 1.5rem;
 
   input[type='range'] {
     &::-webkit-slider-runnable-track,
@@ -36,6 +46,7 @@ $h: 3rem;
       -webkit-appearance: none;
     }
 
+    outline: none;
     grid-column: 1;
     grid-row: 2;
     background: none;
@@ -71,10 +82,24 @@ $h: 3rem;
   }
 
   .fill {
-    background: red;
+    background: c.$colorPrimaryLight;
     content: '';
     grid-column: 1;
     grid-row: 2;
+    height: 50%;
     pointer-events: none;
+    border-radius: $radius;
+  }
+
+  .fillPlaceholder {
+    background: c.$colorNeutral;
+    border: 1px solid c.$colorNeutralLight;
+    content: '';
+    grid-column: 1;
+    grid-row: 2;
+    height: 50%;
+    pointer-events: none;
+    border-radius: $radius;
+    width: 100%;
   }
 }
