Apply suggestions from code review
Co-authored-by: Andrey Goncharov <andrey@goncharov.page>

--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -22,10 +22,7 @@
 
   // hide native checkbox
   input {
-    height: 1px;
-    width: 1px;
-    opacity: 0;
-    position: absolute;
+    @include h.visuallyHidden;
   }
 
   /**
