--- a/packages/ui/src/Radio.module.scss
+++ b/packages/ui/src/Radio.module.scss
@@ -16,10 +16,7 @@
 
   // hide native checkbox
   input {
-    height: 1px;
-    width: 1px;
-    opacity: 0;
-    position: absolute;
+    @include h.visuallyHidden;
   }
 
   // default visible checkmark
