Make Label visible

--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -13,6 +13,7 @@ $paddingLeftWithIcon: c.$grid * 8;
   position: relative;
 
   .inputBlock {
+    margin-top: c.$grid;
     display: flex;
     flex-direction: row;
     align-items: center;
