--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -22,12 +22,6 @@
     border-color: c.$colorAccessibilityOutline;
   }
 
-  &:hover,
-  &.hover {
-    background-color: c.$colorNeutralLighter;
-    box-shadow: inset 0 0 0 c.$borderWidth c.$colorNeutralLight;
-  }
-
   &:focus,
   &.focus {
     // Do not remove outline for high-contrast modes
@@ -41,5 +35,25 @@
 
   &:disabled {
     cursor: not-allowed;
+  }
+
+  &.primary {
+    color: c.$colorPrimary;
+
+    &:hover,
+    &.hover {
+      &:not(:disabled) {
+        background-color: c.$colorNeutralLighter;
+        box-shadow: inset 0 0 0 c.$borderWidth c.$colorNeutralLight;
+      }
+    }
+
+    &:disabled {
+      color: c.$colorTextSecondary;
+    }
+  }
+
+  &.transparent {
+    color: inherit;
   }
 }
