Refactor usage of IconButton

--- a/packages/ui/src/Toast.module.scss
+++ b/packages/ui/src/Toast.module.scss
@@ -14,25 +14,12 @@
 
   .content {
     word-break: break-all;
-  }
-
-  .close {
-    margin-left: c.$grid * 2.5;
-
-    &:hover,
-    &.hover {
-      background-color: transparent;
-      box-shadow: none;
-    }
+    margin-right: c.$grid * 2.5;
   }
 
   &.success {
     background-color: c.$colorSuccess;
     color: c.$colorNeutralWhite;
-
-    .closeIcon {
-      color: c.$colorNeutralWhite;
-    }
   }
 
   &.info {
@@ -41,10 +28,6 @@
 
     .icon {
       color: c.$colorInfoDark;
-    }
-
-    .closeIcon {
-      color: c.$colorText;
     }
   }
 
@@ -55,18 +38,10 @@
     .icon {
       color: c.$colorWarningDark;
     }
-
-    .closeIcon {
-      color: c.$colorText;
-    }
   }
 
   &.critical {
     background-color: c.$colorError;
     color: c.$colorNeutralWhite;
-
-    .closeIcon {
-      color: c.$colorNeutralWhite;
-    }
   }
 }
