--- a/packages/ui/styles/fonts.css
+++ b/packages/ui/styles/fonts.css
@@ -6,17 +6,11 @@
   font-style: normal;
   font-weight: 300;
   src: url('../assets/ubuntu-v15-latin-300.eot'); /* IE9 Compat Modes */
-  src: local('Ubuntu Light'), local('Ubuntu-Light'),
-    url('../assets/ubuntu-v15-latin-300.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-300.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/ubuntu-v15-latin-300.woff') format('woff'),
-    /* Modern Browsers */ url('../assets/ubuntu-v15-latin-300.ttf')
-      format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/ubuntu-v15-latin-300.svg#Ubuntu') format('svg'); /* Legacy iOS */
+  src: local('Ubuntu Light'), local('Ubuntu-Light'), url('../assets/ubuntu-v15-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/ubuntu-v15-latin-300.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/ubuntu-v15-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/ubuntu-v15-latin-300.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
 /* ubuntu-regular - latin */
 @font-face {
@@ -24,18 +18,11 @@
   font-style: normal;
   font-weight: 400;
   src: url('../assets/ubuntu-v15-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Ubuntu Regular'), local('Ubuntu-Regular'),
-    url('../assets/ubuntu-v15-latin-regular.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-regular.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/ubuntu-v15-latin-regular.woff') format('woff'),
-    /* Modern Browsers */
-      url('../assets/ubuntu-v15-latin-regular.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/ubuntu-v15-latin-regular.svg#Ubuntu')
-      format('svg'); /* Legacy iOS */
+  src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url('../assets/ubuntu-v15-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/ubuntu-v15-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/ubuntu-v15-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/ubuntu-v15-latin-regular.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
 /* ubuntu-500 - latin */
 @font-face {
@@ -43,17 +30,11 @@
   font-style: normal;
   font-weight: 500;
   src: url('../assets/ubuntu-v15-latin-500.eot'); /* IE9 Compat Modes */
-  src: local('Ubuntu Medium'), local('Ubuntu-Medium'),
-    url('../assets/ubuntu-v15-latin-500.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-500.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/ubuntu-v15-latin-500.woff') format('woff'),
-    /* Modern Browsers */ url('../assets/ubuntu-v15-latin-500.ttf')
-      format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/ubuntu-v15-latin-500.svg#Ubuntu') format('svg'); /* Legacy iOS */
+  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url('../assets/ubuntu-v15-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/ubuntu-v15-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/ubuntu-v15-latin-500.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/ubuntu-v15-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/ubuntu-v15-latin-500.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
 
 /* open-sans-300 - latin */
@@ -62,18 +43,11 @@
   font-style: normal;
   font-weight: 300;
   src: url('../assets/open-sans-v18-latin-300.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Light'), local('OpenSans-Light'),
-    url('../assets/open-sans-v18-latin-300.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-300.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/open-sans-v18-latin-300.woff') format('woff'),
-    /* Modern Browsers */ url('../assets/open-sans-v18-latin-300.ttf')
-      format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/open-sans-v18-latin-300.svg#OpenSans')
-      format('svg'); /* Legacy iOS */
+  src: local('Open Sans Light'), local('OpenSans-Light'), url('../assets/open-sans-v18-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/open-sans-v18-latin-300.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/open-sans-v18-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/open-sans-v18-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 /* open-sans-regular - latin */
 @font-face {
@@ -82,18 +56,11 @@
   font-weight: 400;
   src: url('../assets/open-sans-v18-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Open Sans Regular'), local('OpenSans-Regular'),
-    url('../assets/open-sans-v18-latin-regular.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-regular.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/open-sans-v18-latin-regular.woff') format('woff'),
-    /* Modern Browsers */
-      url('../assets/open-sans-v18-latin-regular.ttf')
-      format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/open-sans-v18-latin-regular.svg#OpenSans')
-      format('svg'); /* Legacy iOS */
+    url('../assets/open-sans-v18-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/open-sans-v18-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/open-sans-v18-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/open-sans-v18-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 /* open-sans-600 - latin */
 @font-face {
@@ -102,15 +69,9 @@
   font-weight: 600;
   src: url('../assets/open-sans-v18-latin-600.eot'); /* IE9 Compat Modes */
   src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
-    url('../assets/open-sans-v18-latin-600.eot?#iefix')
-      format('embedded-opentype'),
-    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-600.woff2')
-      format('woff2'),
-    /* Super Modern Browsers */
-      url('../assets/open-sans-v18-latin-600.woff') format('woff'),
-    /* Modern Browsers */ url('../assets/open-sans-v18-latin-600.ttf')
-      format('truetype'),
-    /* Safari, Android, iOS */
-      url('../assets/open-sans-v18-latin-600.svg#OpenSans')
-      format('svg'); /* Legacy iOS */
+    url('../assets/open-sans-v18-latin-600.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/open-sans-v18-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../assets/open-sans-v18-latin-600.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/open-sans-v18-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/open-sans-v18-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
