--- a/packages/ui/src/Radio.module.scss
+++ b/packages/ui/src/Radio.module.scss
@@ -13,6 +13,8 @@
   cursor: pointer;
 
   @include c.typographyBodySmall;
+  // we need to provide spacing between radios if they're in a vertical column
+  margin-bottom: c.$grid;
 
   // hide native checkbox
   input {
@@ -31,6 +33,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    // in case we have inline mode, we should have a padding like native radio button has
+    margin-left: c.$grid;
   }
 
   & > input:checked ~ .checkmark {
@@ -66,26 +71,35 @@
     padding-right: c.$grid * 1.25;
   }
 
+  // Error state
+  &.error input:checked ~ * {
+    border-color: c.$colorError;
+  }
+
   /**
     Disabled
   */
   &.disabled {
     cursor: not-allowed;
+    color: c.$colorNeutralLight;
   }
 
-  // Outline on focus
-  & > input:focus ~ .checkmark,
-  & > input:checked:focus ~ .checkmark,
-  &.focus > input ~ span.checkmark {
-    @include h.outlineFormField;
+  &.focus > input,
+  input:focus {
+    ~ .checkmark {
+      @include h.outlineFormField;
+    }
   }
 
-  &.disabled > input:indeterminate ~ .checkmark,
-  &.disabled > input:checked ~ .checkmark {
-    background-color: c.$colorNeutral;
+  &.disabled > input:disabled ~ .checkmark {
     border-color: c.$colorNeutralLight;
   }
+
   &.disabled > input:hover ~ .checkmark {
     border-color: c.$colorNeutralLight;
+  }
+
+  &.disabled > input:disabled:checked ~ .checkmark {
+    background-color: c.$colorNeutral;
   }
 }
