feat: address review comments

--- a/packages/ui/src/TextArea.module.scss
+++ b/packages/ui/src/TextArea.module.scss
@@ -30,6 +30,10 @@
     &::placeholder {
       color: c.$colorTextSecondary;
     }
+
+    &.notResizable {
+      resize: none;
+    }
   }
 
   &.empty {
